2008-08-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (add_tic_user): Ignore NULL labels. This prevents possible
	segfault if tic labels are requested from a non-existent data column.

2008-07-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp(wxt_set_color):
	Pay attention to the value of 'set palette maxcolors'.
	Bugfix.

2008-07-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (plot_ticlabel_using): If tic labels will be generated
	from an expression then force evaluation of all column contents.
	Otherwise references to column() return uninitialized garbage. Bugfix.

2008-07-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c src/command.c (pause_command) src/command.h:
	New variant 'pause mouse close' will pause until the plot window is
	closed. Unlike existing variants, this does not disable mouse-clicks,
	hotkeys, or zooming.  Add wxt to the list of terminals that need a
	work-around to avoid losing an input character when the plot window
	is closed.

2008-07-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_buttonpress): Zooming uses mouse button 3.
	Do not disable it just because we are using buttons 1 or 2 for something
	else.

2008-07-21  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_vector): Work around a bug in ghostscript/gv.
	If there is a long string of mixed relative/absolute lines without a
	stroke command, ghostscript renders it veeeery slowly.  We already 
	limit the number of relative moves in a row; this patch adds a "stroke".
	Bug #2021942

	* src/graphics.c (plot_vectors) src/plot2d.c (get_data):
	Allow 2D vector plots to draw color from an extra data column.

2008-07-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (check_for_variable_color):  Consolidate all the checks
	for deriving color from a data column into a single subroutine.

	* src/plot2d.c (eval_plots get_data) docs/gnuplot.doc: