@@ -2,6 +2,11 @@
 
 	* src/axis.c (add_tic_user): Ignore NULL labels. This prevents possible
 	segfault if tic labels are requested from a non-existent data column.
+	Bugfix.
+
+	* src/plot2d.c (eval_plots) src/graphics.c (do_plot):
+	Histograms did not correctly honor 'set style user increment'.
+	Bugfix.
 
 2008-07-29  Ethan Merritt  <merritt@u.washington.edu>
 
